Добавил тест, выровнял стили, мелкий рефакторинг